- Oasis Clay loot table added (and made shovel the base mining tool for it) - Coconut Milk added as a new food - Recipes added for coconut milk, oasis clay, terracotta from oasis clay and brick from oasis clay ball

--- a/src/main/resources/assets/realitymod/lang/en_us.json
+++ b/src/main/resources/assets/realitymod/lang/en_us.json
@@ -7,6 +7,7 @@
   "creativetab.rm_food_and_drinks": "RealityMod Food & Drinks",
 
   "item.realitymod.coconut": "Coconut",
+  "item.realitymod.coconut_milk": "Coconut Milk",
   "item.realitymod.desert_turtle_scute": "Desert Turtle Scute",
   "item.realitymod.oasis_clay_ball": "Oasis Clay Ball",
   "item.minecraft.scute": "Sea Turtle Scute",
