--- a/src/main/resources/assets/realitymod/lang/en_us.json
+++ b/src/main/resources/assets/realitymod/lang/en_us.json
@@ -21,11 +21,14 @@
   "creativetab.rm_natural_blocks": "RealityMod Natural Blocks",
   "creativetab.rm_ingredients": "RealityMod Ingredients",
   "creativetab.rm_food_and_drinks": "RealityMod Food & Drinks",
+  "creativetab.rm_spawn_eggs": "RealityMod Spawn Eggs",
 
   "item.realitymod.coconut": "Coconut",
   "item.realitymod.coconut_milk": "Coconut Milk",
   "item.realitymod.desert_turtle_scute": "Desert Turtle Scute",
+  "item.realitymod.desert_turtle_spawn_egg": "Desert Turtle Spawn Egg",
   "item.realitymod.oasis_clay_ball": "Oasis Clay Ball",
   "item.minecraft.scute": "Sea Turtle Scute",
-  "item.minecraft.turtle_helmet": "Sea Turtle Shell"
+  "item.minecraft.turtle_helmet": "Sea Turtle Shell",
+  "item.minecraft.turtle_spawn_egg": "Sea Turtle Spawn Egg"
 }
