- desert turtle spawning, breeding, egg functions(sadly for now are not stackable on each other)

--- a/src/main/resources/assets/realitymod/lang/en_us.json
+++ b/src/main/resources/assets/realitymod/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "block.realitymod.desert_turtle_egg": "Desert Turtle Egg",
   "block.realitymod.oasis_clay": "Oasis Clay",
   "block.realitymod.palm_button": "Palm Button",
   "block.realitymod.palm_door": "Palm Door",
