- desert turtles and eggs fixed

--- a/src/main/resources/assets/realitymod/lang/en_us.json
+++ b/src/main/resources/assets/realitymod/lang/en_us.json
@@ -5,12 +5,14 @@
   "block.realitymod.palm_door": "Palm Door",
   "block.realitymod.palm_fence": "Palm Fence",
   "block.realitymod.palm_fence_gate": "Palm Fence Gate",
+  "block.realitymod.palm_hanging_sign": "Palm Hanging Sign",
   "block.realitymod.palm_leaves": "Palm Leaves",
   "block.realitymod.palm_log": "Palm Log",
   "block.realitymod.palm_planks": "Palm Planks",
   "block.realitymod.palm_pressure_plate": "Palm Pressure Plate",
   "block.realitymod.palm_sapling": "Palm Sapling",
   "block.realitymod.palm_slab": "Palm Slab",
+  "block.realitymod.palm_sign": "Palm Sign",
   "block.realitymod.palm_stairs": "Palm Stairs",
   "block.realitymod.palm_trapdoor": "Palm Trapdoor",
   "block.realitymod.palm_wood": "Palm Wood",
@@ -20,6 +22,7 @@
 
   "creativetab.rm_building_blocks": "RealityMod Building Blocks",
   "creativetab.rm_natural_blocks": "RealityMod Natural Blocks",
+  "creativetab.rm_functional_blocks": "RealityMod Functional Blocks",
   "creativetab.rm_ingredients": "RealityMod Ingredients",
   "creativetab.rm_food_and_drinks": "RealityMod Food & Drinks",
   "creativetab.rm_spawn_eggs": "RealityMod Spawn Eggs",
