- fossil added (new ore)

--- a/src/main/resources/assets/realitymod/lang/en_us.json
+++ b/src/main/resources/assets/realitymod/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "block.realitymod.desert_turtle_egg": "Desert Turtle Egg",
+  "block.realitymod.fossil": "Fossil",
   "block.realitymod.oasis_clay": "Oasis Clay",
   "block.realitymod.palm_button": "Palm Button",
   "block.realitymod.palm_door": "Palm Door",
